# sportyfin

./: Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-image.yml
sportyfin/: sportyfin.py
sportyfin/util/: event_info.py  league_colours.py  scraping.py
