# https://github.com/axelmierczuk/sportyfin
[metadata]
name = sportyfin
version = 1.0.8
author = simon3948
url = https://github.com/simon3948/sportyfin
description = file: README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
platform = any
classifiers=
        Development Status :: 4 - Beta
        Intended Audience :: Telecommunications Industry
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.9
